tests/miniJava/pos/000866_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( 0 . java ( ) ) if ( 0 ) { } else { } else while ( 0 ) { } } }
