tests/miniJava/neg/004087_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java . { }
